Fixed a bug where the scrollbar was going off-screen with certain heights

--- a/src/renderer/components/PageContainer/PageContainer.module.scss
+++ b/src/renderer/components/PageContainer/PageContainer.module.scss
@@ -1,8 +1,14 @@
 .pageParent {
     height: 100%;
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    position: fixed;
+    top:0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+
+    display: grid;
+    grid-template-rows: auto 1fr;
 
     .titleBar {
         width: 100%;
@@ -43,7 +49,7 @@
 
     .pageContainer {
         display: flex;
-        height: 100%;
+        height: calc(100vh - 44px);
         width: 100%;
 
         main {
@@ -64,11 +70,6 @@
                 line-height: 2.5rem;
                 user-select: none;
             }
-
-            &.scroll {
-                height: calc(100% - 44px) !important;
-            }
-
         }
     }
 }
